--- a/compiler-rt/test/dfsan/lit.cfg
+++ b/compiler-rt/test/dfsan/lit.cfg
@@ -21,6 +21,5 @@ config.substitutions.append( ("%clangxx_dfsan ", build_invocation(clang_dfsan_cx
 # Default test suffixes.
 config.suffixes = ['.c', '.cc', '.cpp']
 
-# DataFlowSanitizer tests are currently supported on Linux only.
-if config.host_os not in ['Linux']:
+if config.host_os not in ['Linux', 'NetBSD']:
   config.unsupported = True
